--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
 <h1>Samuel Henry Woodard</h1>
+<div><img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/IMG_20181209_165259.jpg"></div>
 
