--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<link rel=stylesheet href=styles/index.css>
 <h1>Samuel Henry Woodard</h1>
-<div><img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/IMG_20181209_165259.jpg"></div>
+<section id=main>
+  <img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/IMG_20181209_165259.jpg">
+  <div>
+    <a href=mailto:samwoodard@samwoodard.com target=_blank>m</a>
+    <a href=tel:+1-415-250-1591>t</a>
+    <a href=https://facebook.com/samhwoodard target=_blank>fb</a>
+  </div>
+</section>
 
