--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <a href=mailto:samwoodard@samwoodard.com target=_blank>m</a>
     <a href=tel:+1-415-250-1591>t</a>
     <a href=https://facebook.com/samhwoodard target=_blank>fb</a>
+    <a href=https://www.instagram.com/samhwoodard/ target=_blank>insta</a>
   </div>
 </section>
 
