Image is smaller size and remove phone

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <link rel=stylesheet href=styles/index.css>
 <h1>Samuel Henry Woodard</h1>
 <section id=main>
-  <img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/IMG_20181209_165259.jpg">
+  <img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg">
   <div>
     <a href=mailto:samwoodard@samwoodard.com target=_blank>m</a>
-    <a href=tel:+1-415-250-1591>t</a>
     <a href=https://facebook.com/samhwoodard target=_blank>fb</a>
     <a href=https://www.instagram.com/samhwoodard/ target=_blank>insta</a>
   </div>
