--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <section id=main>
   <img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg">
   <div>
-    <a href=mailto:samwoodard@samwoodard.com target=_blank>m</a>
+    <a href=mailto:samwoodard@samwoodard.com target=_blank>e</a>
     <a href=https://facebook.com/samhwoodard target=_blank>fb</a>
     <a href=https://www.instagram.com/samhwoodard/ target=_blank>insta</a>
   </div>
