--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <link rel=stylesheet href=styles/index.css>
 <h1>Samuel Henry Woodard</h1>
 <section id=main>
-  <img alt="me" src="https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg">
+  <nav>
+    <a href=#food>food</a>
+  </nav>
+  <br>
+  <img alt=me src=https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg>
   <div>
     <a href=mailto:samwoodard@samwoodard.com target=_blank>e</a>
     <a href=https://facebook.com/samhwoodard target=_blank>fb</a>
@@ -10,3 +14,43 @@
   </div>
 </section>
 
+<a name=food></a>
+<section id=food>
+  <div class="meal">
+    <div class=date>
+      <h2>Wednesday 2021-02-17</h2>
+      <h3>I call it the "kitchen sink" breakfast</h3>
+      <p>
+        On top: Chinese (American) Spinach and Broccoli, sour cream, crumbled tortilla chips
+        In the middle: Two poached eggs, cheddar cheese
+        Underneath: Sauteed onions in olive oil, salsa roja, and Sol Food pique
+
+        #poachedeggs #kitodiet
+      </p>
+      <div class=images>
+        <img src=images/PXL_20210217_161804508.jpg>
+        <img src=images/PXL_20210217_161806175.jpg>
+        <img src=images/PXL_20210217_162119464.jpg>
+        <img src=images/PXL_20210217_162120333.jpg>
+      </div>
+    </div>
+  </div>
+  <div class="meal">
+    <div class=date>
+      <h2>Friday 2021-02-19</h2>
+      <h3>Savory Oatmeal</h3>
+      <p>
+        1/4 cup cooked rolled oats
+        2 poached eggs
+        1/3 cup Indian egglant
+        Shredded cheddar
+        Raita
+        A small handfull of arugula
+        Sol food lemon garlic salad dressing
+        Sol food pique hot sause
+
+        #poachedeggs
+      </p>
+    </div>
+  </div>
+</section>
