Add nicotine usage. Restructure food log markup.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <section id=main>
   <nav>
     <a href=#food>food</a>
+    <a href=#nic>nic</a>
   </nav>
   <br>
   <img alt=me src=https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg>
@@ -16,10 +17,11 @@
 
 <a name=food></a>
 <section id=food>
-  <div class="meal">
-    <div class=date>
-      <h2>Wednesday 2021-02-17</h2>
-      <h3>I call it the "kitchen sink" breakfast</h3>
+  <h2>Food</h2>
+  <div class=day>
+    <h3>Wednesday 2021-02-17</h3>
+    <div class=meal>
+      <h4>I call it the "kitchen sink" breakfast</h3>
       <p>
         On top: Chinese (American) Spinach and Broccoli, sour cream, crumbled tortilla chips
         In the middle: Two poached eggs, cheddar cheese
@@ -35,10 +37,10 @@
       </div>
     </div>
   </div>
-  <div class="meal">
-    <div class=date>
-      <h2>Friday 2021-02-19</h2>
-      <h3>Savory Oatmeal</h3>
+  <div class=day>
+    <h3>Friday 2021-02-19</h3>
+    <div class=meal>
+      <h4>Savory Oatmeal</h4>
       <p>
         1/4 cup cooked rolled oats
         2 poached eggs
@@ -52,5 +54,14 @@
         #poachedeggs
       </p>
     </div>
+  </div>
+</section>
+
+<a name=nic></a>
+<section id=nic>
+  <h2>Nic</h2>
+  <div class=date>
+    <h3>Friday 2021-02-19</h3>
+    <b>6mg</b>
   </div>
 </section>
