add images for meal on 2021-02-19

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel=stylesheet href=styles/index.css>
 <h1>Samuel Henry Woodard</h1>
+<a name=top></a>
 <section id=main>
   <nav>
     <a href=#food>food</a>
@@ -53,15 +54,20 @@
 
         #poachedeggs
       </p>
+      <div class=images>
+        <img src=images/PXL_20210219_141543391.jpg>
+        <img src=images/PXL_20210219_141545935.jpg>
+      </div>
     </div>
   </div>
+  <a href=top>top</a>
 </section>
 
 <a name=nic></a>
 <section id=nic>
   <h2>Nic</h2>
   <div class=date>
-    <h3>Friday 2021-02-19</h3>
-    <b>6mg</b>
+    <h3>Friday 2021-02-19 <b>6mg</b></h3>
   </div>
+  <a href=top>top</a>
 </section>
