--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-  <a href=top>top</a>
+  <a href=#top>top</a>
 </section>
 
 <a name=nic></a>
@@ -69,5 +69,5 @@
   <div class=date>
     <h3>Friday 2021-02-19 <b>6mg</b></h3>
   </div>
-  <a href=top>top</a>
+  <a href=#top>top</a>
 </section>
