--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         In the middle: Two poached eggs, cheddar cheese
         Underneath: Sauteed onions in olive oil, salsa roja, and Sol Food pique
 
-        #poachedeggs #kitodiet
+        #poachedeggs #ketodiet
       </p>
       <div class=images>
         <img src=images/PXL_20210217_161804508.jpg>
