add favion, style

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <script type=module src=js/index.js></script>
 <link rel=stylesheet href=styles/index.css>
-<h1>Samuel Henry Woodard</h1>
 <a name=top></a>
-<section id=main>
-  <nav>
-    <a href=#food>food</a>
-    <a href=#nic>nic</a>
-  </nav>
-  <br>
-  <img alt=me src=https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg>
-  <div>
+<header>
+  <section id=title>
+    <h1>Samuel Henry Woodard</h1>
+    <nav>
+      <a href=#food>food</a>
+      <a href=#nic>nic</a>
+    </nav>
+  </section>
+  <section id=contact>
     <a href=mailto:samwoodard@samwoodard.com target=_blank>e</a>
     <a href=https://facebook.com/samhwoodard target=_blank>fb</a>
     <a href=https://www.instagram.com/samhwoodard/ target=_blank>insta</a>
-  </div>
-</section>
+  </section>
+  <br>
+  <img alt=me src=https://samwoodard.sfo3.cdn.digitaloceanspaces.com/me.jpg>
+</header>
+
+<hr>
 
 <a name=food></a>
 <section id=food>
@@ -25,12 +29,11 @@
     <div class=day>
       <h3>Wednesday 2021-02-17</h3>
       <div class=meal>
-        <h4>I call it the "kitchen sink" breakfast</h3>
+        <span class=meal--title>I call it the "kitchen sink" breakfast</span>
         <p>
           On top: Chinese (American) Spinach and Broccoli, sour cream, crumbled tortilla chips
           In the middle: Two poached eggs, cheddar cheese
           Underneath: Sauteed onions in olive oil, salsa roja, and Sol Food pique
-
           #poachedeggs #ketodiet
         </p>
         <div class=images>
@@ -46,7 +49,7 @@
   <div class=day>
     <h3>Friday 2021-02-19</h3>
     <div class=meal>
-      <h4>Savory Oatmeal</h4>
+      <span class=meal--title>Savory Oatmeal</span>
       <p>
         1/4 cup cooked rolled oats
         2 poached eggs
@@ -67,6 +70,8 @@
   </div>
   <a href=#top>top</a>
 </section>
+
+<hr>
 
 <a name=nic></a>
 <section id=nic>
