Change b to span, add Saturday nic usage

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 <section id=nic>
   <h2>Nic</h2>
   <div class=date>
-    <h3>Friday 2021-02-19 <b>6mg</b></h3>
+    <h3>Friday 2021-02-19 <span>6mg</span></h3>
+  </div>
+  <div class=date>
+    <h3>Saturday 2021-02-20 <span>0mg</span></h3>
   </div>
   <a href=#top>top</a>
 </section>
